# gr-ettus

./: CMakeLists.txt  README.md
grc/: uhd_rfnoc_schmidlcox.xml
include/ettus/: CMakeLists.txt  rfnoc_block_impl.h
lib/: rfnoc_block_impl.cc  rfnoc_radio_impl.h
python/: CMakeLists.txt  __init__.py
python/rfnoc-modtool/: CMakeLists.txt  __init__.py  modtool_base.py  modtool_newmod.py  util_functions.py
python/rfnoc-modtool/rfnoc-newmod/apps/: test.grc  top_block.py
python/rfnoc-modtool/rfnoc-newmod/lib/: copy_block_ctrl.cpp
python/rfnoc_modtool/: CMakeLists.txt  __init__.py  code_generator.py  modtool_add.py  modtool_base.py  modtool_newmod.py  templates.py  util_functions.py
python/rfnoc_modtool/rfnoc-newmod/include/rfnoc_example/: copy_block_ctrl.hpp
python/rfnoc_modtool/rfnoc-newmod/lib/: test_rfnoc_example.cc
python/rfnoc_modtool/rfnoc-newmod/rfnoc/fpga-src/: Makefile.srcs
python/utils/: CMakeLists.txt  rfnocmodtool
rfnoc-modtool/: CMakeLists.txt  modtool_add.py  modtool_base.py  modtool_makexml.py  modtool_newmod.py  util_functions.py
rfnoc-modtool/rfnoc-newmod/: CMakeLists.txt
rfnoc-modtool/rfnoc-newmod/apps/: test.py
rfnoc-modtool/rfnoc-newmod/grc/: rfnoc_example_rfnoc_copy.xml
rfnoc-modtool/rfnoc-newmod/include/rfnoc_example/: CMakeLists.txt  rfnoc_copy.h
rfnoc-modtool/rfnoc-newmod/lib/: CMakeLists.txt  rfnoc_copy_impl.cc  rfnoc_copy_impl.h
rfnoc-modtool/rfnoc-newmod/python/: qa_rfnoc_copy.py
rfnoc-modtool/rfnoc-newmod/rfnoc/blocks/: CMakeLists.txt  copy.xml
rfnoc-modtool/rfnoc-newmod/rfnoc/fpga-src/: noc_block_copy.v
rfnoc-modtool/rfnoc-newmod/rfnoc/host/: CMakeLists.txt
rfnoc-modtool/rfnoc-newmod/rfnoc/testbenches/noc_block_copy_tb/: Makefile  noc_block_copy_tb.v
rfnoc-modtool/rfnoc-newmod/swig/: rfnoc_example_swig.i  rfnoc_example_swig_orig.i
swig/: ettus_swig.i
